--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4"
+    "web-vitals": "^3.0.4",
+    "antd": "^5.11.1",
+    "aos": "^2.3.4",
+    "axios": "^1.6.0",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongoose": "^8.0.0",
+    "react-bootstrap": "^2.9.1",
+    "react-router-dom": "^6.18.0",
+    "react-spinners": "^0.13.8",
+    "react-stripe-checkout": "^2.6.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.0"
+    
   },
   "scripts": {
     "start": "react-scripts start",
